[build-system]
requires = ["scikit-build-core", "numpy<2.0", "scipy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/pyalps"]
cmake.verbose = true
build-dir = "./build_alps"
#build.tool-args = ["-j8", "-l13"]
logging.level = "DEBUG"

[tool.scikit-build.cmake.define]
Boost_ROOT_DIR = {env="Boost_ROOT_DIR", default="EMPTY"}
CMAKE_CXX_FLAGS = "-fPIC -fpermissive -DBOOST_NO_AUTO_PTR -DBOOST_FILESYSTEM_NO_CXX20_ATOMIC_REF -DBOOST_TIMER_ENABLE_DEPRECATED"
CMAKE_C_FLAGS = "-fPIC"
CMAKE_BUILD_PARALLEL_LEVEL = "1"
ALPS_PYTHON_WHEEL = "ON"

[project]
name = "pyalps"
version = "2.3.2"
authors = [
  { name="Sergei Iskakov", email="siskakov@umich.edu" },
]

dependencies = ["numpy", "h5py", "scipy"]

description = "Python Applications and Libraries for Physics Simulations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://green-phys.org"
Issues = "https://github.com/Green-Phys/green-ac/issues"


[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-benchmark[histogram]>=3.2.1',
]

[tool.cibuildwheel]
skip = ["*-musllinux*"]
test-requires = "pytest"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = "wget https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.gz; yum install -y eigen3-devel gmp-devel"
#test-command = "echo 'installed'"

[tool.cibuildwheel.macos]
before-all = "brew reinstall eigen gmp"
#test-command = "echo 'installed'"



